java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testTryWrapper9.pass
/*
 * AbstractClass.java
 *
 * Created on March 12, 2005, 7:22 PM
 */

package org.netbeans.test.java.hints;

import java.io.IOException;

/**
 *
 * @author lahvac
 */
public abstract class TryWrapper9 {
    
    /** Creates a new instance of AbstractClass */
    public TryWrapper9() {
        try {
            throw new IOException();
        } catch (IOException ex) {
            ex.printStackTrace();
        }
    }
    
}
